--- a/src/ArcGISPortalViewer/View/PortalItemPage.xaml
+++ b/src/ArcGISPortalViewer/View/PortalItemPage.xaml
@@ -111,7 +111,7 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <Button x:Name="backButton" Click="GoBack" IsEnabled="{Binding Frame.CanGoBack, ElementName=pageRoot}" Style="{StaticResource BackButtonStyle}"/>
-                <TextBlock x:Name="pageTitle" Grid.Column="1" Style="{StaticResource PageHeaderTextStyle}" TextTrimming="WordEllipsis" Padding="0,10,0,2" Margin="0,0,0,36">
+                <TextBlock x:Name="pageTitle" Grid.Column="1" Style="{StaticResource PageHeaderTextStyle}" TextTrimming="WordEllipsis" ToolTipService.ToolTip="{Binding PortalItem.Title}" Padding="0,10,0,2" Margin="0,0,0,36">
                     <Run Text="{Binding PortalItem.Title}"/> <!-- used Run for the ellispses to appear when the width is set to Auto -->
                 </TextBlock>
 
