Added ToolTip on PortalCollectionGroup showing webmap thumbnails.

--- a/src/ArcGISPortalViewer/View/PortalCollectionPage.xaml
+++ b/src/ArcGISPortalViewer/View/PortalCollectionPage.xaml
@@ -655,7 +655,7 @@
                         </LinearGradientBrush>
                     </Border.Background>
                 </Border>
-                <TextBlock Text="{Binding Title}" TextTrimming="WordEllipsis"
+                <TextBlock Text="{Binding Title}" TextTrimming="WordEllipsis" ToolTipService.ToolTip="{Binding Title}"
 										VerticalAlignment="Bottom"
 										Style="{StaticResource TitleTextStyle}" Foreground="White" 
 										Height="25" Margin="15,0,15,15" />
